# sidereal

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  architecture.md  docker-compose.yaml  replication.md  skills-lock.json
bins/sidereal-client/: Cargo.toml
bins/sidereal-client/src/: auth_ui.rs  client_core.rs  dialog_ui.rs  lib.rs  main.rs  native.rs  prediction.rs  wasm.rs
bins/sidereal-client/src/client/: input.rs
bins/sidereal-client/src/native/: app_state.rs  asset_loading_ui.rs  assets.rs  audio.rs  auth_net.rs  auth_ui.rs  backdrop.rs  bootstrap.rs  camera.rs  components.rs  config.rs  control.rs  debug_overlay.rs  dev_console.rs  dialog_ui.rs  ecs_util.rs  input.rs  lighting.rs  logout.rs  mod.rs  motion.rs  owner_manifest.rs  pause_menu.rs  platform.rs  platform_io.rs  plugins.rs  render_layers.rs  replication.rs  resources.rs  scene.rs  scene_world.rs  shaders.rs  state.rs  tactical.rs  transforms.rs  transport.rs  ui.rs  visuals.rs
bins/sidereal-client/src/platform/: mod.rs  wasm.rs
bins/sidereal-client/src/runtime/: app_builder.rs  app_setup.rs  app_state.rs  asset_loading_ui.rs  assets.rs  audio.rs  auth_net.rs  auth_ui.rs  backdrop.rs  bootstrap.rs  combat_messages.rs  components.rs  control.rs  debug_overlay.rs  dev_console.rs  dialog_ui.rs  input.rs  lighting.rs  logout.rs  mod.rs  motion.rs  notification_ui.rs  owner_manifest.rs  pause_menu.rs  plugins.rs  post_process.rs  render_layers.rs  replication.rs  resources.rs  scene.rs  scene_world.rs  sensor_ring.rs  shaders.rs  startup_assets.rs  startup_loading_ui.rs  tactical.rs  transforms.rs  transport.rs  ui.rs  visuals.rs  (+1 more)
bins/sidereal-gateway/: Cargo.toml
bins/sidereal-gateway/src/: api.rs  auth.rs  config.rs  main.rs
bins/sidereal-gateway/src/auth/: bootstrap_dispatch.rs  config.rs  crypto.rs  email.rs  error.rs  service.rs  starter_world.rs  starter_world_scripts.rs  store.rs  totp.rs  (+1 more)
bins/sidereal-gateway/tests/: api_helpers.rs  auth_flow.rs  auth_helpers.rs
bins/sidereal-replication/: Cargo.toml
bins/sidereal-replication/src/: bootstrap.rs  bootstrap_runtime.rs  config.rs  lib.rs  log_buffer.rs  main.rs  persistence_helpers.rs  plugins.rs  state.rs  tests.rs  tui.rs  visibility.rs
bins/sidereal-replication/tests/: bootstrap_unit.rs  lifecycle.rs  state_ingest.rs  transport_lightyear_e2e.rs
crates/sidereal-asset-runtime/: Cargo.toml
crates/sidereal-asset-runtime/src/: lib.rs
crates/sidereal-game/: Cargo.toml
crates/sidereal-game/src/: actions.rs  asteroid_field.rs  asteroid_registry.rs  character_movement.rs  collision_outline_generation.rs  combat.rs  component_meta.rs  corvette.rs  editor_schema.rs  flight.rs  hierarchy.rs  lib.rs  mass.rs  planet_registry.rs  procedural_sprite_generation.rs  render_layers.rs  scanner.rs  ship_registry.rs  visibility_range.rs  world_spatial.rs
crates/sidereal-game/tests/: actions.rs  asteroid_field.rs  ballistic_weapon.rs  character_movement.rs  combat.rs  component_metadata.rs  component_registry.rs  corvette.rs  destructible.rs  flight.rs  mass.rs  procedural_sprite.rs  shared_simulation_plugin.rs  visibility_range.rs  world_spatial.rs
crates/sidereal-net/: Cargo.toml
crates/sidereal-net/src/: lib.rs  lightyear_protocol.rs
crates/sidereal-net/tests/: lightyear_protocol.rs
crates/sidereal-runtime-sync/: Cargo.toml
crates/sidereal-runtime-sync/src/: entity_templates.rs  lib.rs
crates/sidereal-scripting/: Cargo.toml
crates/sidereal-scripting/src/: audio_registry.rs  lib.rs
crates/sidereal-scripting/tests/: asset_registry.rs  asset_registry_repo_file.rs  asteroid_registry.rs  audio_registry.rs  planet_registry.rs  script_content_smoke.rs  ship_registry.rs
crates/sidereal-shader-preview/: Cargo.toml
crates/sidereal-shader-preview/src/: lib.rs
crates/sidereal-shader-preview/tests/: planet_preview_study.rs
crates/sidereal-ui/: Cargo.toml
crates/sidereal-ui/src/: layout.rs  lib.rs  theme.rs  typography.rs  widgets.rs
crates/sidereal-ui/tests/: text_input_state.rs  theme_registry.rs
replication-server/: Cargo.toml
replication-server/src/: lib.rs  main.rs
replication-server/src/game/: mod.rs  scene_loader.rs  sector_manager.rs  shard_manager.rs
replication-server/src/net/: mod.rs  renet2_server.rs  replicon_server.rs
shard-server/: Cargo.toml
shard-server/src/: main.rs
shard-server/src/game/: mod.rs  sector_manager.rs  shard_manager.rs
shard-server/src/net/: mod.rs  renet2_client.rs
sidereal/: Cargo.toml
sidereal-core/: Cargo.toml
sidereal-core/src/: lib.rs
sidereal-core/src/ecs/: mod.rs
sidereal-core/tests/: networking_tests.rs  physics_tests.rs  replicon_tests.rs  serialization_tests.rs  ship_bundle_test.rs
sidereal-replication-server/: Cargo.toml
sidereal-replication-server/src/: lib.rs  main.rs
sidereal-replication-server/src/database/: client.rs  mod.rs
sidereal-replication-server/src/game/: mod.rs  process_message_queue.rs  scene_loader.rs  shard_manager.rs
sidereal-replication-server/src/network/: connections.rs  mod.rs  server.rs  shared.rs
sidereal-replication-server/src/replication/: mod.rs  plugin.rs
sidereal-replication-server/src/scene/: loader.rs  mod.rs
sidereal-replication-server/src/universe/: mod.rs  plugin.rs  systems.rs
sidereal-replication-server/tests/: README.md  database_tests.rs  integration_tests.rs  loader_tests.rs  mock_database.rs  physics_tests.rs  scene_tests.rs  universe_tests.rs
sidereal-shard-server/: Cargo.toml
sidereal-shard-server/src/: config.rs  main.rs  physics.rs  shadow.rs
sidereal-shard-server/src/cluster/: README.md  boundary.rs  manager.rs  mod.rs  plugin.rs  systems.rs
sidereal-shard-server/src/game/: mod.rs  process_message_queue.rs  sector_assignemnt.rs
sidereal-shard-server/src/network/: client.rs
sidereal-shard-server/src/replication/: client.rs  mod.rs  p2p.rs  plugin.rs
sidereal/src/: lib.rs  serialization.rs
sidereal/src/ecs/: mod.rs
sidereal/src/net/: config.rs  connection.rs  messages.rs  mod.rs  shard_communication.rs  shard_connection.rs  utils.rs
sidereal/tests/: serialization_tests.rs
(+853 files in other folders)
