[workspace]
resolver = "2"
members = [
  "crates/sidereal-core",
  "crates/sidereal-net",
  "crates/sidereal-game",
  "crates/sidereal-persistence",
  "crates/sidereal-runtime-sync",
  "crates/sidereal-asset-runtime",
  "bins/sidereal-replication",
  "bins/sidereal-gateway",
  "bins/sidereal-client",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Sidereal Team"]

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.8"
avian3d = { version = "0.5.0", features = ["serialize"] }
base64 = "0.22"
bevy = { version = "0.18.0" }
bevy_remote = "0.18.0"
lightyear = { version = "0.26.4", features = ["udp", "raw_connection", "input_native", "prediction", "interpolation", "frame_interpolation", "avian3d"] }
jsonwebtoken = "9.3"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = "1.48"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
postgres = { version = "0.19", features = ["with-uuid-1"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
