[workspace]
resolver = "2"
members = [
  "crates/sidereal-ui",
  "crates/sidereal-audio",
  "crates/sidereal-component-macros",
  "crates/sidereal-core",
  "crates/sidereal-net",
  "crates/sidereal-game",
  "crates/sidereal-persistence",
  "crates/sidereal-runtime-sync",
  "crates/sidereal-asset-runtime",
  "crates/sidereal-shader-preview",
  "crates/sidereal-scripting",
  "bins/sidereal-replication",
  "bins/sidereal-gateway",
  "bins/sidereal-client",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Sidereal Team"]

[workspace.dependencies]
inventory = "0.3"
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", default-features = false }
avian2d = { version = "0.5.0", default-features = false, features = ["2d", "f32", "parry-f32", "parallel", "serialize", "xpbd_joints"] }
base64 = "0.22"
bevy = { version = "0.18.0", default-features = false }
bevy_remote = { version = "0.18.0", default-features = false }
lightyear = { git = "https://github.com/Dastari/lightyear", rev = "87b7dfd95e415d2b7646effeb09a3af09272f86e", default-features = false, features = ["udp", "raw_connection", "input_native", "replication", "prediction", "interpolation", "frame_interpolation", "avian2d", "webtransport", "webtransport_self_signed"] }
jsonwebtoken = "9.3"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = "1.48"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
postgres = { version = "0.19", features = ["with-uuid-1"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mlua = { version = "0.11", features = ["lua54", "vendored"] }

[patch.crates-io]
parry2d = { git = "https://github.com/dimforge/parry.git", tag = "v0.25.3", package = "parry2d" }
parry2d-f64 = { git = "https://github.com/dimforge/parry.git", tag = "v0.25.3", package = "parry2d-f64" }

#[profile.release]
#opt-level = 'z'
#lto = true
#codegen-units = 1
#panic = 'abort'
#strip = true
