# Cargo.toml
[package]
name = "replication-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Explicitly enable replicon for the replication server
sidereal = { path = "../sidereal", features = ["replicon"] }

dotenv = "0.15"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json"] }
bevy_remote = "0.15.3"

bevy = { workspace = true }
bevy_state = { workspace = true }
bevy_replicon = {workspace = true}
bevy_replicon_renet2 = { workspace = true }
bevy_renet2 = {workspace = true, features = ["netcode"] }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"]}
uuid = { workspace = true }
tracing = { workspace = true }

tracing-subscriber = "0.3"
bincode = "2.0.0"


[features]
default = []

