# Cargo.toml
[package]
name = "shard-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_state = {workspace= true}
bevy_remote = "0.15.3"

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = {workspace = true }
bincode = {workspace = true }
tracing = {workspace = true}


tracing-subscriber = "0.3"
avian2d = "0.2.1"
dotenv = "0.15.0"

# Explicitly disable replicon feature for sidereal
sidereal = { path = "../sidereal", default-features = false }

[features]
default = []