# Cargo.toml
[package]
name = "shard-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Bevy core dependencies
bevy = { workspace = true }
bevy_state = { workspace = true }
bevy_renet2 = { workspace = true, features = ["netcode"] }
bevy_remote = "0.15.3"

# Other dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
avian2d = "0.2.1"
dotenv = "0.15.0"

# Use sidereal without Replicon features
sidereal = { path = "../sidereal", default-features = false }

[features]
default = []
