# Cargo.toml
[package]
name = "sidereal-core"
version = "0.2.0"
edition = "2021"

[dependencies]
# Common Project
bevy = { workspace = true }
bevy_reflect =  {workspace = true }
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }

# Unique to this Workspace
assert-json-diff = "2.0.2"
avian2d = "0.2"
