# Cargo.toml
[package]
name = "sidereal-replication-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_state = "0.15.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-lite = "1.13"
sidereal-core = { path = "../sidereal-core" }
bevy_rapier2d = { version = "0.29.0", features = ["serde-serialize"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
bevy_replicon = "0.30.1"
bevy_replicon_renet2 = "0.5.0"
renet2 = "0.5.0"
renet2_netcode = "0.5.0"

[features]
default = []