# Cargo.toml
[package]
name = "sidereal-shard-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_state = {workspace= true}
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = {workspace = true }
tracing-subscriber = "0.3"
sidereal-core = { path = "../sidereal-core" }
bevy_rapier2d = { version = "0.29.0", features = ["serde-serialize"] }
dotenv = "0.15"

[features]
default = []