# Cargo.toml
[package]
name = "sidereal-shard-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_state = {workspace= true}
bevy_renet = {workspace=true}
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = {workspace = true }
bincode = {workspace = true }

tracing-subscriber = "0.3"
dotenv = "0.15.0"
tracing = "0.1"
avian2d = "0.2.1"

sidereal-core = { path = "../sidereal-core" }

[features]
default = []