[package]
name = "sidereal-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
avian2d.workspace = true
bevy = { workspace = true, features = ["webgpu"] }
sidereal-core = { path = "../../crates/sidereal-core" }
serde.workspace = true
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_remote = "0.18.0"
lightyear.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rand.workspace = true
sidereal-game = { path = "../../crates/sidereal-game" }
sidereal-net = { path = "../../crates/sidereal-net", features = ["lightyear_protocol"] }
sidereal-runtime-sync = { path = "../../crates/sidereal-runtime-sync" }
sidereal-asset-runtime = { path = "../../crates/sidereal-asset-runtime" }
uuid.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_remote = { version = "0.18.0", default-features = false, features = ["bevy_asset"] }
