[package]
name = "sidereal-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "sidereal_client"
# Keep the shared lib target rlib-only so native/Windows exe builds do not also
# try to link a Windows cdylib. If/when we add a dedicated wasm packaging step,
# that step should emit the browser artifact explicitly instead of assuming the
# default Cargo lib target produces a cdylib on every platform build.
crate-type = ["rlib"]

[dependencies]
avian2d.workspace = true
bevy = { workspace = true, default-features = false, features = ["2d", "webgpu", "mp3"] }
bevy_svg = "0.18.0"
sidereal-core = { path = "../../crates/sidereal-core" }
sidereal-asset-runtime = { path = "../../crates/sidereal-asset-runtime", default-features = false }
sidereal-game = { path = "../../crates/sidereal-game" }
sidereal-net = { path = "../../crates/sidereal-net", features = ["lightyear_protocol"] }
sidereal-runtime-sync = { path = "../../crates/sidereal-runtime-sync", default-features = false }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_remote = { workspace = true, default-features = false, features = ["http"] }
lightyear = { git = "https://github.com/Dastari/lightyear", rev = "29867036", default-features = false, features = ["std", "client", "raw_connection", "udp", "input_native", "prediction", "interpolation", "frame_interpolation", "avian2d"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rand.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
lightyear = { git = "https://github.com/Dastari/lightyear", rev = "29867036", default-features = false, features = ["std", "client", "raw_connection", "webtransport", "prediction", "interpolation", "frame_interpolation", "avian2d"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["DomException", "DomStringList", "Event", "Headers", "IdbDatabase", "IdbFactory", "IdbObjectStore", "IdbOpenDbRequest", "IdbRequest", "IdbTransaction", "IdbTransactionMode", "Request", "RequestInit", "Response", "Window"] }
