[package]
name = "sidereal-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["macros"] }
base64.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sidereal-asset-runtime = { path = "../../crates/sidereal-asset-runtime" }
sidereal-core = { path = "../../crates/sidereal-core" }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "net", "rt-multi-thread"] }
tokio-postgres.workspace = true
postgres.workspace = true
tokio-util = { version = "0.7", features = ["io"] }
uuid.workspace = true
mlua.workspace = true
sidereal-game = { path = "../../crates/sidereal-game" }
sidereal-persistence = { path = "../../crates/sidereal-persistence" }
sidereal-scripting = { path = "../../crates/sidereal-scripting" }
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
serde_json.workspace = true
tower = { version = "0.5", features = ["util"] }
sidereal-replication = { path = "../sidereal-replication" }
