[package]
name = "sidereal-replication"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
avian2d.workspace = true
bevy.workspace = true
base64.workspace = true
bevy_remote.workspace = true
lightyear.workspace = true
sidereal-core = { path = "../../crates/sidereal-core" }
sidereal-game = { path = "../../crates/sidereal-game" }
sidereal-net = { path = "../../crates/sidereal-net", features = ["lightyear_protocol"] }
sidereal-persistence = { path = "../../crates/sidereal-persistence" }
sidereal-runtime-sync = { path = "../../crates/sidereal-runtime-sync" }
sidereal-asset-runtime = { path = "../../crates/sidereal-asset-runtime" }
postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
mlua.workspace = true
sidereal-scripting = { path = "../../crates/sidereal-scripting" }
