[package]
name = "sidereal-replication"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
avian2d.workspace = true
bevy.workspace = true
axum.workspace = true
base64.workspace = true
bevy_remote.workspace = true
crossterm = "0.29"
lightyear.workspace = true
ratatui = "0.29"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
sidereal-core = { path = "../../crates/sidereal-core" }
sidereal-game = { path = "../../crates/sidereal-game" }
sidereal-net = { path = "../../crates/sidereal-net", features = ["lightyear_protocol"] }
sidereal-persistence = { path = "../../crates/sidereal-persistence" }
sidereal-runtime-sync = { path = "../../crates/sidereal-runtime-sync" }
sidereal-asset-runtime = { path = "../../crates/sidereal-asset-runtime" }
postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
mlua.workspace = true
sidereal-scripting = { path = "../../crates/sidereal-scripting" }
