[package]
name = "sidereal-replication"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
avian2d.workspace = true
bevy = { workspace = true, default-features = false, features = ["bevy_asset", "bevy_log", "bevy_mesh", "bevy_scene", "serialize"] }
axum = { workspace = true, default-features = false, features = ["http1", "json", "tokio", "tracing"] }
base64.workspace = true
bevy_remote = { workspace = true, default-features = false, features = ["http"] }
crossterm = { version = "0.29", default-features = false, features = ["bracketed-paste", "events"] }
lightyear = { workspace = true, default-features = false, features = ["std", "server", "raw_connection", "udp", "input_native", "replication", "prediction", "interpolation", "frame_interpolation", "avian2d", "webtransport", "webtransport_self_signed"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sidereal-core = { path = "../../crates/sidereal-core" }
sidereal-game = { path = "../../crates/sidereal-game" }
sidereal-net = { path = "../../crates/sidereal-net", features = ["lightyear_protocol"] }
sidereal-persistence = { path = "../../crates/sidereal-persistence" }
sidereal-runtime-sync = { path = "../../crates/sidereal-runtime-sync" }
sidereal-asset-runtime = { path = "../../crates/sidereal-asset-runtime" }
postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
mlua.workspace = true
sidereal-scripting = { path = "../../crates/sidereal-scripting" }
