[package]
name = "sidereal-game"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
avian2d.workspace = true
bevy.workspace = true
inventory.workspace = true
serde.workspace = true
sidereal-core = { path = "../sidereal-core" }
sidereal-component-macros = { path = "../sidereal-component-macros" }
uuid.workspace = true
