[package]
name = "sidereal-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
lightyear_protocol = [
    "dep:avian2d",
    "dep:bevy",
    "dep:inventory",
    "dep:lightyear",
    "dep:serde",
    "dep:serde_json",
    "dep:sidereal-game",
    "sidereal-game/lightyear",
    "dep:sidereal-asset-runtime",
]

[dependencies]
avian2d = { workspace = true, optional = true }
bevy = { workspace = true, optional = true, default-features = false }
inventory = { workspace = true, optional = true }
lightyear = { workspace = true, optional = true, default-features = false, features = ["std", "client", "server", "replication", "prediction", "interpolation", "frame_interpolation", "avian2d"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sidereal-game = { path = "../sidereal-game", optional = true }
sidereal-asset-runtime = { path = "../sidereal-asset-runtime", optional = true, default-features = false }
uuid = { workspace = true }
