[package]
name = "sidereal-runtime-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy.workspace = true
serde.workspace = true
serde_json.workspace = true
sidereal-game = { path = "../sidereal-game" }
sidereal-persistence = { path = "../sidereal-persistence" }
uuid.workspace = true
