[package]
name = "sidereal-scripting"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mlua.workspace = true
serde.workspace = true
serde_json.workspace = true
sidereal-game = { path = "../sidereal-game" }
sidereal-persistence = { path = "../sidereal-persistence" }
thiserror.workspace = true
tracing.workspace = true
