[package]
name = "sidereal-shader-preview"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { workspace = true, features = ["webgpu"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
naga = { version = "27.0.3", default-features = false, features = ["wgsl-in"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Performance", "console"] }
console_error_panic_hook = "0.1"
